# example-github-UTSA

./: README.md  pyproject.toml
src/my_project/: __main__.py  cnn_model.py  dataloader.py  trainer.py
